html casi listo

--- a/index.html
+++ b/index.html
@@ -17,27 +17,172 @@
 </head>
 <body>
 	<div id="wrapper">
-		<div class="row">
-			<div class="large-4 columns">
+		<div id="index" class="row">
+			<div class="large-2 columns fixed">
 				<h1 id="logo">Karaterapia</h1>
-			</div>
-			<div class="large-8 columns">
-				<h5 class="proverbio">Somos como alguien sumergido en el agua,<br />que se queja de que no tiene nada qué beber.</h5>
-			</div>
-		</div><!--/row-->
-
-		<div class="row">
-			<div class="large-4 columns">
 				<nav>
-					<li><a href="#beneficios">Beneficios</a></li>
-					<li><a href="#metodologia">Metodolog&iacute;a</a></li>
-					<li><a href="#servicios">Servicios</a></li>
-					<li><a href="#instructor">Instructor</a></li>
-					<li><a href="#contacto">Contacto</a></li>
+					<a href="#beneficios">Beneficios</a>
+					<a href="#metodologia">Metodolog&iacute;a</a>
+					<a href="#servicios">Servicios</a>
+					<a href="#instructor">Instructor</a>
+					<a href="#contacto">Contacto</a>
 				</nav>
 			</div>
-		</div>
-
+			<div class="large-8 columns right">
+				<h5 class="proverbio">Somos como alguien sumergido en el agua,<br />que se queja de que no tiene nada qué beber.</h5>
+				<span class="source">Hsue-Feng</span>
+				<h2>Cultive la conciencia y <br />descubra su potencial</h2>
+				<h3>¡Bienvenido a un camino hacia<br />el interior de uno mismo!<br />La Karaterapia<span class="sup">&reg;</span> es un novedoso programa de entrenamiento mente-cuerpo basado en la conciencia plena (mindfulness) para fomentar el crecimiento personal y profesional.</h3>
+				<p>La conciencia plena es un estado mental esencial en el Karate que tiene milenios de
+	historia. Esta habilidad, adaptada al ámbito empresarial es una herramienta de
+	competitividad simple y profunda que fortalece al capital humano.</p>
+				<ul class="boxes">
+					<li class="box1">
+						<span class="lightbulb"></span>
+						<h3>Conozca</h3>
+						<p>cómo la Karaterapia<span class="sup">&reg;</span>  le puede ayudar</p>
+					</li>
+					<li class="box2">
+						<span class="roi"></span>
+						<h3>Valore</h3>
+						<p>la rentabilidad de la formaci&oacute;n</p>
+					</li>
+					<li class="box3">
+						<span class="book"></span>
+						<h3>Explore</h3>
+						<p>nuestros programas de entrenamiento</p>
+					</li>
+					<li class="box4">
+						<span class="envelope"></span>
+						<h3>Reserve</h3>
+						<p>una sesión de Karaterapia<span class="sup">&reg;</span> </p>
+					</li>
+				</ul><!--/boxes-->
+			</div><!--/large-8-->
+		</div><!--/row-->
+		<div id="beneficios" class="row">
+			<div class="large-8 columns right">
+				<h5 class="proverbio">El que no sabe a qué cosas atender<br />y a cuáles ignorar,<br />atiende a lo que no tiene importancia<br />y hace caso omiso de lo esencial.</h5>
+				<span class="source">Siddharta Gautama</span>
+				<div class="content">
+					<h3>El valor de estar presente</h3>
+					<p>La Karaterapia<span class="sup">&reg;</span> favorece a cualquiera que desee aprender una nueva forma de mejorar su rendimiento en el trabajo y de potenciar su negocio. Estudios recientes de neurociencia indican que produce tres beneficios:</p>
+					<ol>
+						<li><strong>Salud y Bienestar.</strong> Promueve el equilibrio interno para un óptimo rendimiento físico y mental. Sirve como cura estrés.</li>
+						<li><strong>Desarrolla la atención.</strong> Aporta una mayor lucidez, reduciendo así la     probabilidad de cometer errores. Favorece la creatividad, la innovación y la toma de decisiones.</li>
+						<li><strong>Conexión interpersonal.</strong> Facilita la empatía, la compasión y disminuye la agresividad. Fomenta el liderazgo y las relaciones de colaboración para que los equipos fluyan.</li>
+					</ol>
+					<h3>Rentabilidad</h3>
+					<p>Los beneficios obtenidos con esta formación redundan en una inversión:</p>
+					<table cellspacing="50">
+						<tr>
+							<td class="center"><strong>-</strong>Gastos</td>
+							<td>Ahorros en atención médica relacionados con el estrés.<br />
+							Mejora de las tasas de absentismo, presentismo y rotación.</td>
+						</tr>
+						<tr>
+							<td class="center"><strong>+</strong>Ingresos</td>
+							<td>Aumento en el rendimiento y la productividad laboral.<br />
+										Efectividad de los equipos de trabajo.</td>
+						</tr>
+					</table>
+				</div><!--/content-->
+				<img src="images/beneficios.jpg" alt="" />
+			</div><!--/large-8-->
+		</div><!--/beneficios-->
+		<div id="metodologia" class="row">
+			<div class="large-8 columns right">
+				<h5 class="proverbio">El zen es como el jabón.<br />Primero te lavas con él<br />y luego te lo quitas.</h5>
+				<span class="source">Yamaoka Tesshu</span>
+				<div class="content">
+					<h3>Aprender haciendo</h3>
+					<p>La Karaterapia<span class="sup">&reg;</span> es una formación teórico-experiencial, apta para todos y se imparte a grupos reducidos en la propia oficina. Comprende sesiones explicativas, ejercicios de relajación, meditación y técnicas de Karate suave. La pedagogía es muy participativa, los colaboradores se implican en la clase y se llevan deberes a casa.</p>
+					<img src="images/venn.png" alt="" class="venn" />
+					<h3>Antecedentes</h3>
+					<p>Durante los últimos años han proliferado de forma exponencial estudios que resaltan la utilidad de cultivar la conciencia plena en la empresa. Los principales autores provienen de diferentes campos del Zen (Thich Nhat Hanh), de la investigación médica (J.Kabat-Zinn), neurológica (R.Davidson), psicológica (D.Goleman), del desarrollo organizacional (J.Hunter) y artículos recogidos por publicaciones gerenciales líderes como la revista Harvard Business Review.</p>
+					<h3>Fundamentos</h3>
+					<p>Durante los últimos años han proliferado de forma exponencial estudios que resaltan la utilidad de cultivar la conciencia plena en la empresa. Los principales autores provienen de diferentes campos del Zen (Thich Nhat Hanh), de la investigación médica (J.Kabat-Zinn), neurológica (R.Davidson), psicológica (D.Goleman), del desarrollo organizacional (J.Hunter) y artículos recogidos por publicaciones gerenciales líderes como la revista Harvard Business Review.</p>
+					<ol>
+						<li><strong>Actitud proactiva.</strong> Se busca que el colaborador no delegue sobre otros toda la responsabilidad de mejorar su bienestar y su eficacia personales.</li>
+						<li><strong>Prácticas saludables.</strong> Se ofrece como una terapia complementaria, sin entrar a diagnosticar ni a cambiar tratamientos de los colaboradores.</li>
+						<li><strong>Relación holística.</strong> Se le denomina medicina mente-cuerpo enfatizando que ambos conceptos no están separados y se entrenan de forma conjunta.</li>
+					</ol>
+				</div><!--/content-->
+				<img src="images/metodologia.jpg" alt="" />
+			</div><!--/large-8-->
+		</div><!--/metodologia-->
+		<div id="servicios" class="row">
+			<div class="large-8 columns right">
+				<h5 class="proverbio">El gran sendero no tiene puertas.<br />Miles de rutas llevan a él.<br />Cuando uno entra por esta puerta sin puerta<br />camina libremente entre el cielo y la tierra.</h5>
+				<span class="source">Mumonkan</span>
+				<div class="content">
+					<h3>Soluciones a la medida</h3>
+					<p>La Karaterapia® es un programa estructurado que propone una manera más consciente de trabajar, para fomentar el bienestar personal y la efectividad laboral.</p>
+					<p>Se elabora a partir de módulos que abordan diversos temas empresariales comunes y se ofrece en varios formatos: desde una charla para introducir el programa y realizar algunas prácticas, hasta talleres de 4 a 7 semanas donde se ven distintas técnicas y aplicaciones. Se personaliza según los requerimientos del cliente, a través de un proceso de consultoría de cuatro fases:</p>
+					<ul class="pasos">
+						<li class="item-1"><h6>Diagnóstico</h6>
+						<span>Definir retos <br />e identificar <br />soluciones.</span></li>
+						<li class="item-2"><h6>Dise&ntilde;o</h6>
+						<span>Presentar un <br />plan de acción<br />detallado</span></li>
+						<li class="item-3"><h6>Implementaci&oacute;n</h6>
+						<span>Impartir<br />el programa<br />de formaci&oacute;n</span></li>
+						<li class="item-4"><h6>Medici&oacute;n</h6><span>Valorar los<br />resultados<br />obtenidos</span></li>
+					</ul>
+				</div><!--/content-->
+				<img src="images/servicios.jpg" alt="" />
+			</div><!--/large-8-->
+		</div><!--/#servicios-->
+		<div class="row">
+			<div id="instructor">
+				<div class="large-8 columns right">
+					<h5 class="proverbio">No puedes guiar a nadie más lejos<br />de lo que tú mismo hayas llegado.</h5>
+					<span class="source">Gene Mauch</span>
+					<div class="content">
+						<h3>Un ejecutivo karateka</h3>
+						<p>Kenneth Contreras es cinturón negro 4to Dan de la Federación Mundial de Karate y director técnico en Costa Rica de la Asociación Japonesa de Karate. Ex competidor del equipo olímpico costarricense, bicampeón panamericano en combate.</p>
+						<p>Titulado en Conciencia Plena por la Universidad Internacional de Valencia, España. Postgraduado en Control Gerencial y Gerencia en Sistemas de Información por Maastricht School of Management, Países Bajos. Licenciado en Administración de Empresas por la Universidad de Costa Rica.</p>
+						<p>Desarrolló su carrera laboral en Europa y es creador e instructor de la Karaterapia<span class="sup">&reg;</span>.</p>
+					</div><!--/content-->
+					<img src="images/instructor.jpg" alt="" />
+				</div><!--large-8-->
+			</div><!--/#instructor-->
+		</div><!--/row-->
+		<div class="row">
+			<div id="contacto" class="large-8 columns right">
+				<h5 class="proverbio">La verdadera generosidad hacia el futuro<br />consiste en entregarlo todo al presente.</h5>
+				<span class="source">Albert Camus</span>
+				<div class="content">
+					<p>Tel&eacute;fono: +506 8707 7002<br />Correo: info@karaterapia.com</p>
+					<form action="">
+						<h3>Conecte con nosotros</h3>
+						<div class="large-6 columns left">
+							<input type="text" placeholder="Nombre" />
+							<input type="text" placeholder="Email" />
+							<input type="text" placeholder="Teléfono" />
+						</div><!--/left-->
+						<div class="large-6 columns right">
+							<textarea name="" id="" cols="30" rows="10" placeholder="Mensaje"></textarea>
+							<input type="button" value="Enviar" />
+						</div><!--/right-->
+					</form>
+				</div><!--/content-->
+			</div><!--/#contacto-->
+		</div><!--.row-->
+		<footer class="row">
+			<div class="large-8 columns right">
+				<div class="large-9 left columns">
+					<p>Todos los derechos reservados.</p>
+					<p>&copy; 2014 Karaterapia<span class="sup">&reg;</span>. Desarrollo y diseño por TwelveOhSix Creative.</p>
+				</div>
+				<div class="large-3 columns right social">
+					<a href="" class="tw"></a>
+					<a href="" class="li"></a>
+					<a href="" class="vi"></a>
+					<a href="" class="fb"></a>
+				</div>
+			</div>
+		</footer>
+		<a href="#index" class="top">Back to top</a>
 	</div><!--/wrapper-->
   <script>
   document.write('<script src=' +
