html listo, hopefully

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <body>
 	<div id="wrapper">
 		<div id="index" class="row">
-			<div class="large-2 columns fixed">
-				<h1 id="logo">Karaterapia</h1>
+			<div class="large-3 columns fixed">
+				<h1 id="logo"><a href="#index">Karaterapia</a></h1>
 				<nav>
 					<a href="#beneficios">Beneficios</a>
 					<a href="#metodologia">Metodolog&iacute;a</a>
@@ -32,27 +32,31 @@
 				<h5 class="proverbio">Somos como alguien sumergido en el agua,<br />que se queja de que no tiene nada qué beber.</h5>
 				<span class="source">Hsue-Feng</span>
 				<h2>Cultive la conciencia y <br />descubra su potencial</h2>
-				<h3>¡Bienvenido a un camino hacia<br />el interior de uno mismo!<br />La Karaterapia<span class="sup">&reg;</span> es un novedoso programa de entrenamiento mente-cuerpo basado en la conciencia plena (mindfulness) para fomentar el crecimiento personal y profesional.</h3>
+				<h3>¡Bienvenido a un camino hacia el interior de uno mismo!<br />La Karaterapia<span class="sup">&reg;</span> es un novedoso programa de entrenamiento mente-cuerpo basado en la conciencia plena (mindfulness) para fomentar el crecimiento personal y profesional.</h3>
 				<p>La conciencia plena es un estado mental esencial en el Karate que tiene milenios de
 	historia. Esta habilidad, adaptada al ámbito empresarial es una herramienta de
 	competitividad simple y profunda que fortalece al capital humano.</p>
 				<ul class="boxes">
 					<li class="box1">
+						<a href="#beneficios"></a>
 						<span class="lightbulb"></span>
 						<h3>Conozca</h3>
 						<p>cómo la Karaterapia<span class="sup">&reg;</span>  le puede ayudar</p>
 					</li>
 					<li class="box2">
+						<a href="#rentabilidad"></a>
 						<span class="roi"></span>
 						<h3>Valore</h3>
 						<p>la rentabilidad de la formaci&oacute;n</p>
 					</li>
 					<li class="box3">
+						<a href="#servicios"></a>
 						<span class="book"></span>
 						<h3>Explore</h3>
 						<p>nuestros programas de entrenamiento</p>
 					</li>
 					<li class="box4">
+						<a href="#contacto"></a>
 						<span class="envelope"></span>
 						<h3>Reserve</h3>
 						<p>una sesión de Karaterapia<span class="sup">&reg;</span> </p>
@@ -68,22 +72,22 @@
 					<h3>El valor de estar presente</h3>
 					<p>La Karaterapia<span class="sup">&reg;</span> favorece a cualquiera que desee aprender una nueva forma de mejorar su rendimiento en el trabajo y de potenciar su negocio. Estudios recientes de neurociencia indican que produce tres beneficios:</p>
 					<ol>
-						<li><strong>Salud y Bienestar.</strong> Promueve el equilibrio interno para un óptimo rendimiento físico y mental. Sirve como cura estrés.</li>
-						<li><strong>Desarrolla la atención.</strong> Aporta una mayor lucidez, reduciendo así la     probabilidad de cometer errores. Favorece la creatividad, la innovación y la toma de decisiones.</li>
-						<li><strong>Conexión interpersonal.</strong> Facilita la empatía, la compasión y disminuye la agresividad. Fomenta el liderazgo y las relaciones de colaboración para que los equipos fluyan.</li>
+						<li><strong>Salud y Bienestar.</strong> <span>Promueve el equilibrio interno para un óptimo rendimiento físico y mental. Sirve como cura estrés.</span></li>
+						<li><strong>Desarrolla la atención.</strong> <span>Aporta una mayor lucidez, reduciendo así la     probabilidad de cometer errores. Favorece la creatividad, la innovación y la toma de decisiones.</span></li>
+						<li><strong>Conexión interpersonal.</strong> <span>Facilita la empatía, la compasión y disminuye la agresividad. Fomenta el liderazgo y las relaciones de colaboración para que los equipos fluyan.</span></li>
 					</ol>
-					<h3>Rentabilidad</h3>
+					<h3 id="rentabilidad">Rentabilidad</h3>
 					<p>Los beneficios obtenidos con esta formación redundan en una inversión:</p>
 					<table cellspacing="50">
 						<tr>
-							<td class="center"><strong>-</strong>Gastos</td>
-							<td>Ahorros en atención médica relacionados con el estrés.<br />
-							Mejora de las tasas de absentismo, presentismo y rotación.</td>
+							<td class="center"><strong class="minus">-</strong>Gastos</td>
+							<td><ul><li>Ahorros en atención médica relacionados con el estrés.</li>
+								<li>Mejora de las tasas de absentismo, presentismo y rotación.</li></ul></td>
 						</tr>
 						<tr>
 							<td class="center"><strong>+</strong>Ingresos</td>
-							<td>Aumento en el rendimiento y la productividad laboral.<br />
-										Efectividad de los equipos de trabajo.</td>
+							<td><ul><li>Aumento en el rendimiento y la productividad laboral.</li>
+								<li>Efectividad de los equipos de trabajo.</li></ul></td>
 						</tr>
 					</table>
 				</div><!--/content-->
@@ -92,7 +96,7 @@
 		</div><!--/beneficios-->
 		<div id="metodologia" class="row">
 			<div class="large-8 columns right">
-				<h5 class="proverbio">El zen es como el jabón.<br />Primero te lavas con él<br />y luego te lo quitas.</h5>
+				<h5 class="proverbio">El Zen es como el jabón.<br />Primero te lavas con él y<br />luego te lo quitas.</h5>
 				<span class="source">Yamaoka Tesshu</span>
 				<div class="content">
 					<h3>Aprender haciendo</h3>
@@ -101,11 +105,11 @@
 					<h3>Antecedentes</h3>
 					<p>Durante los últimos años han proliferado de forma exponencial estudios que resaltan la utilidad de cultivar la conciencia plena en la empresa. Los principales autores provienen de diferentes campos del Zen (Thich Nhat Hanh), de la investigación médica (J.Kabat-Zinn), neurológica (R.Davidson), psicológica (D.Goleman), del desarrollo organizacional (J.Hunter) y artículos recogidos por publicaciones gerenciales líderes como la revista Harvard Business Review.</p>
 					<h3>Fundamentos</h3>
-					<p>Durante los últimos años han proliferado de forma exponencial estudios que resaltan la utilidad de cultivar la conciencia plena en la empresa. Los principales autores provienen de diferentes campos del Zen (Thich Nhat Hanh), de la investigación médica (J.Kabat-Zinn), neurológica (R.Davidson), psicológica (D.Goleman), del desarrollo organizacional (J.Hunter) y artículos recogidos por publicaciones gerenciales líderes como la revista Harvard Business Review.</p>
+					<p>La Karaterapia<span class="sup">&reg;</span> compagina la sabiduría ancestral de la conciencia plena, el Zen y el Karate, con principios gerenciales de vanguardia; en una guía práctica y accesible para promover el rendimiento del capital humano. El programa es científico, secular y se basa en tres principios:</p>
 					<ol>
-						<li><strong>Actitud proactiva.</strong> Se busca que el colaborador no delegue sobre otros toda la responsabilidad de mejorar su bienestar y su eficacia personales.</li>
-						<li><strong>Prácticas saludables.</strong> Se ofrece como una terapia complementaria, sin entrar a diagnosticar ni a cambiar tratamientos de los colaboradores.</li>
-						<li><strong>Relación holística.</strong> Se le denomina medicina mente-cuerpo enfatizando que ambos conceptos no están separados y se entrenan de forma conjunta.</li>
+						<li><strong>Actitud proactiva.</strong> <span>Se busca que el colaborador no delegue sobre otros toda la responsabilidad de mejorar su bienestar y su eficacia personales.</span></li>
+						<li><strong>Prácticas saludables.</strong> <span>Se ofrece como una terapia complementaria, sin entrar a diagnosticar ni a cambiar tratamientos de los colaboradores.</span></li>
+						<li><strong>Relación holística.</strong> <span>Se le denomina medicina mente-cuerpo enfatizando que ambos conceptos no están separados y se entrenan de forma conjunta.</span></li>
 					</ol>
 				</div><!--/content-->
 				<img src="images/metodologia.jpg" alt="" />
@@ -121,31 +125,44 @@
 					<p>Se elabora a partir de módulos que abordan diversos temas empresariales comunes y se ofrece en varios formatos: desde una charla para introducir el programa y realizar algunas prácticas, hasta talleres de 4 a 7 semanas donde se ven distintas técnicas y aplicaciones. Se personaliza según los requerimientos del cliente, a través de un proceso de consultoría de cuatro fases:</p>
 					<ul class="pasos">
 						<li class="item-1"><h6>Diagnóstico</h6>
-						<span>Definir retos <br />e identificar <br />soluciones.</span></li>
+						<span>Definir retos <br />e identificar <br />soluciones</span></li>
 						<li class="item-2"><h6>Dise&ntilde;o</h6>
 						<span>Presentar un <br />plan de acción<br />detallado</span></li>
 						<li class="item-3"><h6>Implementaci&oacute;n</h6>
 						<span>Impartir<br />el programa<br />de formaci&oacute;n</span></li>
 						<li class="item-4"><h6>Medici&oacute;n</h6><span>Valorar los<br />resultados<br />obtenidos</span></li>
 					</ul>
+					<h3>M&oacute;dulos</h3>
+					<h4>Reducci&oacute;n de Estr&eacute;s</h4>
+					<p>Aprenda cómo minimizar el estrés y no sólo a gestionarlo, desarrollando la capacidad de responder en vez de reaccionar a los acontecimientos. Recobre salud y bienestar.</p>
+					<h4>Productividad Zen</h4>
+					<p>Un plan de 3 pasos que le ayudará a mejorar su motivación y rendimiento fomentando su capacidad de introspección.</p>
+					<h4>Liderazgo Consciente</h4>
+					<p>El primer paso para ser un líder efectivo es el auto-liderazgo y la clave está en ser consciente. Aprenda las 9 formas de auto-conciencia que le permitirán transformarse e inspirar a otros.</p>
+					<h4>Gesti&oacute;n de Cambio</h4>
+					<p>Descubra cómo la actitud personal es el fundamento de la resiliencia y el aprendizaje para adaptarse al cambio que exige la realidad empresarial actual.</p>
+					<h4>Gesti&oacute;n de la Atenci&oacute;n</h4>
+					<p>En un entorno empresarial de sobrecarga de información y falta de tiempo, la atención es el factor determinante de la efectividad. Aprenda a identificar y concentrarse en las tareas prioritarias.</p>
+					<h4>C&oacute;digo Bushido</h4>
+					<p>Una guía ética, de comportamiento y liderazgo de los samuráis del IX aplicados a la empresa del XXI que reforzará sus valores e impulsará el aprendizaje organizativo y la lealtad de los equipos.</p>
+					<h4>Cohesi&oacute;n de Equipos</h4>
+					<p>Un método efectivo y sostenible basado en 5 principios y 10 habilidades que optimizan las relaciones interpersonales y de colaboración, para una labor más consciente, satisfactoria y productiva.</p>
 				</div><!--/content-->
 				<img src="images/servicios.jpg" alt="" />
 			</div><!--/large-8-->
 		</div><!--/#servicios-->
-		<div class="row">
-			<div id="instructor">
-				<div class="large-8 columns right">
-					<h5 class="proverbio">No puedes guiar a nadie más lejos<br />de lo que tú mismo hayas llegado.</h5>
-					<span class="source">Gene Mauch</span>
-					<div class="content">
-						<h3>Un ejecutivo karateka</h3>
-						<p>Kenneth Contreras es cinturón negro 4to Dan de la Federación Mundial de Karate y director técnico en Costa Rica de la Asociación Japonesa de Karate. Ex competidor del equipo olímpico costarricense, bicampeón panamericano en combate.</p>
-						<p>Titulado en Conciencia Plena por la Universidad Internacional de Valencia, España. Postgraduado en Control Gerencial y Gerencia en Sistemas de Información por Maastricht School of Management, Países Bajos. Licenciado en Administración de Empresas por la Universidad de Costa Rica.</p>
-						<p>Desarrolló su carrera laboral en Europa y es creador e instructor de la Karaterapia<span class="sup">&reg;</span>.</p>
-					</div><!--/content-->
-					<img src="images/instructor.jpg" alt="" />
-				</div><!--large-8-->
-			</div><!--/#instructor-->
+		<div id="instructor" class="row">
+			<div class="large-8 columns right">
+				<h5 class="proverbio">No puedes guiar a nadie más lejos<br />de lo que tú mismo hayas llegado.</h5>
+				<span class="source">Gene Mauch</span>
+				<div class="content">
+					<h3>Un ejecutivo karateka</h3>
+					<p>Kenneth Contreras es cinturón negro 4to Dan de la Federación Mundial de Karate y director técnico en Costa Rica de la Asociación Japonesa de Karate. Ex competidor del equipo olímpico costarricense, bicampeón panamericano en combate.</p>
+					<p>Titulado en Conciencia Plena por la Universidad Internacional de Valencia, España. Postgraduado en Control Gerencial y Gerencia en Sistemas de Información por Maastricht School of Management, Países Bajos. Licenciado en Administración de Empresas por la Universidad de Costa Rica.</p>
+					<p>Desarrolló su carrera laboral en Europa y es creador e instructor de la Karaterapia<span class="sup">&reg;</span>.</p>
+				</div><!--/content-->
+				<img src="images/instructor.jpg" alt="" />
+			</div><!--large-8-->
 		</div><!--/row-->
 		<div class="row">
 			<div id="contacto" class="large-8 columns right">
@@ -156,8 +173,8 @@
 					<form action="">
 						<h3>Conecte con nosotros</h3>
 						<div class="large-6 columns left">
-							<input type="text" placeholder="Nombre" />
-							<input type="text" placeholder="Email" />
+							<input type="text" placeholder="Nombre (requerido)" />
+							<input type="text" placeholder="Email (requerido)" />
 							<input type="text" placeholder="Teléfono" />
 						</div><!--/left-->
 						<div class="large-6 columns right">
@@ -172,24 +189,25 @@
 			<div class="large-8 columns right">
 				<div class="large-9 left columns">
 					<p>Todos los derechos reservados.</p>
-					<p>&copy; 2014 Karaterapia<span class="sup">&reg;</span>. Desarrollo y diseño por TwelveOhSix Creative.</p>
+					<p>&copy; 2014 Karaterapia<span class="sup">&reg;</span>. Desarrollo y diseño por <a href="http://www.twelveohsixcreative.com">TwelveOhSix Creative</a>.</p>
 				</div>
 				<div class="large-3 columns right social">
-					<a href="" class="tw"></a>
-					<a href="" class="li"></a>
-					<a href="" class="vi"></a>
 					<a href="" class="fb"></a>
+					<a href="" class="vi"></a>
+					<a href="" class="li"></a>
+					<a href="" class="tw"></a>
 				</div>
 			</div>
 		</footer>
-		<a href="#index" class="top">Back to top</a>
+		<a href="#index" class="top" title="Volver al inicio">Back to top</a>
 	</div><!--/wrapper-->
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script>
   document.write('<script src=' +
   ('__proto__' in {} ? 'javascripts/vendor/zepto' : 'javascripts/vendor/jquery') +
   '.js><\/script>')
   </script>
-
+	<script src="javascripts/scripts.js"></script>
   <script src="javascripts/foundation/foundation.js"></script>
 
 	<script src="javascripts/foundation/foundation.abide.js"></script>
