--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 <body>
 	<div id="wrapper">
 		<div id="index" class="row">
-			<div class="large-3 columns fixed">
+			<div class="large-3 medium-3 small-12 columns fixed">
 				<h1 id="logo"><a href="#index">Karaterapia</a></h1>
 				<nav>
+					<a href="#index" class="inicio">Inicio</a>
 					<a href="#beneficios">Beneficios</a>
 					<a href="#metodologia">Metodolog&iacute;a</a>
 					<a href="#servicios">Servicios</a>
@@ -28,55 +29,56 @@
 					<a href="#contacto">Contacto</a>
 				</nav>
 			</div>
-			<div class="large-8 columns right">
+			<div class="large-8 medium-9 small-12 columns right">
 				<h5 class="proverbio">Somos como alguien sumergido en el agua,<br />que se queja de que no tiene nada qué beber.</h5>
 				<span class="source">Hsue-Feng</span>
-				<h2>Cultive la conciencia y <br />descubra su potencial</h2>
-				<h3>¡Bienvenido a un camino hacia el interior de uno mismo!<br />La Karaterapia<span class="sup">&reg;</span> es un novedoso programa de entrenamiento mente-cuerpo basado en la conciencia plena (mindfulness) para fomentar el crecimiento personal y profesional.</h3>
-				<p>La conciencia plena es un estado mental esencial en el Karate que tiene milenios de
-	historia. Esta habilidad, adaptada al ámbito empresarial es una herramienta de
-	competitividad simple y profunda que fortalece al capital humano.</p>
-				<ul class="boxes">
-					<li class="box1">
-						<a href="#beneficios"></a>
-						<span class="lightbulb"></span>
-						<h3>Conozca</h3>
-						<p>cómo la Karaterapia<span class="sup">&reg;</span>  le puede ayudar</p>
-					</li>
-					<li class="box2">
-						<a href="#rentabilidad"></a>
-						<span class="roi"></span>
-						<h3>Valore</h3>
-						<p>la rentabilidad de la formaci&oacute;n</p>
-					</li>
-					<li class="box3">
-						<a href="#servicios"></a>
-						<span class="book"></span>
-						<h3>Explore</h3>
-						<p>nuestros programas de entrenamiento</p>
-					</li>
-					<li class="box4">
-						<a href="#contacto"></a>
-						<span class="envelope"></span>
-						<h3>Reserve</h3>
-						<p>una sesión de Karaterapia<span class="sup">&reg;</span> </p>
-					</li>
-				</ul><!--/boxes-->
+				<div class="content"><h2>Cultive la conciencia y <br />descubra su potencial</h2>
+					<h3>¡Bienvenido a un camino hacia el interior de uno mismo! La Karaterapia<span class="sup">&reg;</span> es un novedoso programa de entrenamiento mente-cuerpo basado en la conciencia plena (mindfulness) para fomentar el crecimiento personal y profesional.</h3>
+					<p>La conciencia plena es un estado mental esencial en el Karate que tiene milenios de
+						historia. Esta habilidad, adaptada al ámbito empresarial es una herramienta de
+						competitividad simple y profunda que fortalece al capital humano.</p>
+					<ul class="boxes">
+						<li class="box1">
+							<a href="#valore"></a>
+							<span class="lightbulb"></span>
+							<h3>Conozca</h3>
+							<p>cómo la Karaterapia<span class="sup">&reg;</span>  le puede ayudar</p>
+						</li>
+						<li class="box2">
+							<a href="#valore"></a>
+							<span class="roi"></span>
+							<h3>Valore</h3>
+							<p>la rentabilidad de <br />la formaci&oacute;n</p>
+						</li>
+						<li class="box3">
+							<a href="#soluciones"></a>
+							<span class="book"></span>
+							<h3>Explore</h3>
+							<p>nuestros programas de entrenamiento</p>
+						</li>
+						<li class="box4">
+							<a href="#contacto"></a>
+							<span class="envelope"></span>
+							<h3>Reserve</h3>
+							<p>una sesión de Karaterapia<span class="sup">&reg;</span> </p>
+						</li>
+					</ul><!--/boxes-->
+				</div><!--/content-->
 			</div><!--/large-8-->
 		</div><!--/row-->
 		<div id="beneficios" class="row">
-			<div class="large-8 columns right">
+			<div class="large-8 medium-9 small-12 columns right">
 				<h5 class="proverbio">El que no sabe a qué cosas atender<br />y a cuáles ignorar,<br />atiende a lo que no tiene importancia<br />y hace caso omiso de lo esencial.</h5>
 				<span class="source">Siddharta Gautama</span>
 				<div class="content">
-					<h3>El valor de estar presente</h3>
+					<h3 id="valore">El valor de estar presente</h3>
 					<p>La Karaterapia<span class="sup">&reg;</span> favorece a cualquiera que desee aprender una nueva forma de mejorar su rendimiento en el trabajo y de potenciar su negocio. Estudios recientes de neurociencia indican que produce tres beneficios:</p>
 					<ol>
 						<li><strong>Salud y Bienestar.</strong> <span>Promueve el equilibrio interno para un óptimo rendimiento físico y mental. Sirve como cura estrés.</span></li>
 						<li><strong>Desarrolla la atención.</strong> <span>Aporta una mayor lucidez, reduciendo así la     probabilidad de cometer errores. Favorece la creatividad, la innovación y la toma de decisiones.</span></li>
 						<li><strong>Conexión interpersonal.</strong> <span>Facilita la empatía, la compasión y disminuye la agresividad. Fomenta el liderazgo y las relaciones de colaboración para que los equipos fluyan.</span></li>
 					</ol>
-					<h3 id="rentabilidad">Rentabilidad</h3>
+					<h3>Rentabilidad</h3>
 					<p>Los beneficios obtenidos con esta formación redundan en una inversión:</p>
 					<table cellspacing="50">
 						<tr>
@@ -95,7 +97,7 @@
 			</div><!--/large-8-->
 		</div><!--/beneficios-->
 		<div id="metodologia" class="row">
-			<div class="large-8 columns right">
+			<div class="large-8 medium-9 small-12 columns right">
 				<h5 class="proverbio">El Zen es como el jabón.<br />Primero te lavas con él y<br />luego te lo quitas.</h5>
 				<span class="source">Yamaoka Tesshu</span>
 				<div class="content">
@@ -116,11 +118,11 @@
 			</div><!--/large-8-->
 		</div><!--/metodologia-->
 		<div id="servicios" class="row">
-			<div class="large-8 columns right">
+			<div class="large-8 medium-9 small-12 columns right">
 				<h5 class="proverbio">El gran sendero no tiene puertas.<br />Miles de rutas llevan a él.<br />Cuando uno entra por esta puerta sin puerta<br />camina libremente entre el cielo y la tierra.</h5>
 				<span class="source">Mumonkan</span>
 				<div class="content">
-					<h3>Soluciones a la medida</h3>
+					<h3 id="soluciones">Soluciones a la medida</h3>
 					<p>La Karaterapia® es un programa estructurado que propone una manera más consciente de trabajar, para fomentar el bienestar personal y la efectividad laboral.</p>
 					<p>Se elabora a partir de módulos que abordan diversos temas empresariales comunes y se ofrece en varios formatos: desde una charla para introducir el programa y realizar algunas prácticas, hasta talleres de 4 a 7 semanas donde se ven distintas técnicas y aplicaciones. Se personaliza según los requerimientos del cliente, a través de un proceso de consultoría de cuatro fases:</p>
 					<ul class="pasos">
@@ -145,14 +147,14 @@
 					<p>En un entorno empresarial de sobrecarga de información y falta de tiempo, la atención es el factor determinante de la efectividad. Aprenda a identificar y concentrarse en las tareas prioritarias.</p>
 					<h4>C&oacute;digo Bushido</h4>
 					<p>Una guía ética, de comportamiento y liderazgo de los samuráis del IX aplicados a la empresa del XXI que reforzará sus valores e impulsará el aprendizaje organizativo y la lealtad de los equipos.</p>
-					<h4>Cohesi&oacute;n de Equipos</h4>
-					<p>Un método efectivo y sostenible basado en 5 principios y 10 habilidades que optimizan las relaciones interpersonales y de colaboración, para una labor más consciente, satisfactoria y productiva.</p>
+					<h4>Inteligencia Colectiva</h4>
+					<p>Un método efectivo y sostenible basado en 5 principios y 10 habilidades, que optimiza la cohesión de los equipos, fomentando la colaboración para una labor más satisfactoria y productiva.</p>
 				</div><!--/content-->
 				<img src="images/servicios.jpg" alt="" />
 			</div><!--/large-8-->
 		</div><!--/#servicios-->
 		<div id="instructor" class="row">
-			<div class="large-8 columns right">
+			<div class="large-8 medium-9 small-12 columns right">
 				<h5 class="proverbio">No puedes guiar a nadie más lejos<br />de lo que tú mismo hayas llegado.</h5>
 				<span class="source">Gene Mauch</span>
 				<div class="content">
@@ -164,20 +166,20 @@
 				<img src="images/instructor.jpg" alt="" />
 			</div><!--large-8-->
 		</div><!--/row-->
-		<div class="row">
-			<div id="contacto" class="large-8 columns right">
+		<div id="contacto" class="row">
+			<div class="large-8 medium-9 small-12 columns right">
 				<h5 class="proverbio">La verdadera generosidad hacia el futuro<br />consiste en entregarlo todo al presente.</h5>
 				<span class="source">Albert Camus</span>
 				<div class="content">
 					<p>Tel&eacute;fono: +506 8707 7002<br />Correo: info@karaterapia.com</p>
 					<form action="">
 						<h3>Conecte con nosotros</h3>
-						<div class="large-6 columns left">
+						<div class="large-6 medium-6 small-12 columns left">
 							<input type="text" placeholder="Nombre (requerido)" />
 							<input type="text" placeholder="Email (requerido)" />
 							<input type="text" placeholder="Teléfono" />
 						</div><!--/left-->
-						<div class="large-6 columns right">
+						<div class="large-6 medium-6 small-12 columns right">
 							<textarea name="" id="" cols="30" rows="10" placeholder="Mensaje"></textarea>
 							<input type="button" value="Enviar" />
 						</div><!--/right-->
@@ -186,12 +188,12 @@
 			</div><!--/#contacto-->
 		</div><!--.row-->
 		<footer class="row">
-			<div class="large-8 columns right">
-				<div class="large-9 left columns">
+			<div class="large-8 medium-9 small-12 columns right">
+				<div class="large-9 medium-8 small-9 left columns">
 					<p>Todos los derechos reservados.</p>
 					<p>&copy; 2014 Karaterapia<span class="sup">&reg;</span>. Desarrollo y diseño por <a href="http://www.twelveohsixcreative.com">TwelveOhSix Creative</a>.</p>
 				</div>
-				<div class="large-3 columns right social">
+				<div class="large-3 medium-3 small-3 columns right social">
 					<a href="" class="fb"></a>
 					<a href="" class="vi"></a>
 					<a href="" class="li"></a>
@@ -210,7 +212,7 @@
 	<script src="javascripts/scripts.js"></script>
   <script src="javascripts/foundation/foundation.js"></script>
 
-	<script src="javascripts/foundation/foundation.abide.js"></script>
+	<!--<script src="javascripts/foundation/foundation.abide.js"></script>
 
 	<script src="javascripts/foundation/foundation.alerts.js"></script>
 
@@ -238,7 +240,7 @@
 
 	<script src="javascripts/foundation/foundation.tooltips.js"></script>
 
-	<script src="javascripts/foundation/foundation.topbar.js"></script>
+	<script src="javascripts/foundation/foundation.topbar.js"></script>-->
 
 
   <script>
